style: edit constants

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Сервис для поиска anime"
     />
-    <meta name="keywords" content="anime, get anime, поиск anime" />
+    <meta name="keywords" content="anime, get anime, поиск anime, аниме" />
     <meta name="author" content="Александр Катрюхин" />
     <title>Get anime info</title>
   </head>
